--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link href="/dist/output.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/adaac12422.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
