--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     <link href="/dist/output.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/adaac12422.js" crossorigin="anonymous"></script>
+    <script src="./javascripts/rellax.min.js"></script>
     <title>Portfolio</title>
   </head>
   <body>
