--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <link href="/dist/output.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/adaac12422.js" crossorigin="anonymous"></script>
-    <title>Portfolio</title>
+    <title>Ryan S. Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
